--- a/sass/pages/_service.scss
+++ b/sass/pages/_service.scss
@@ -101,6 +101,7 @@
 }
 .service-page-main {
     background-color: #F5F8FC;
+    padding-bottom: 5rem;
 }
 .service-page-profile-cards {
     padding-top: 7rem;
