--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -2,6 +2,7 @@
 @use 'search-bar';
 @use 'verif';
 @use 'card-promo';
+@use 'card-internship';
 @use 'card-provider';
 @use 'card-provider-featured';
 @use 'pagination';
