--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1324,6 +1324,14 @@
   cursor: pointer;
 }
 
+/* 
+            @media only screen and (max-width: 680px) {
+                flex-flow: column;
+                padding: 5rem 0;
+                text-align: center;
+                gap: 2rem;
+            }
+*/
 .dashboard {
   background-color: #F3F2FF;
   font-size: 1.4rem;
