--- a/sass/pages/_settings.scss
+++ b/sass/pages/_settings.scss
@@ -158,3 +158,12 @@
     }
 
 }
+
+/* 
+            @media only screen and (max-width: 680px) {
+                flex-flow: column;
+                padding: 5rem 0;
+                text-align: center;
+                gap: 2rem;
+            }
+*/
